include/Win64/Cg.GL.hpp

//-- forward type declarations -----------------------------------------------
//-- type declarations -------------------------------------------------------
typedef unsigned TCGGLenum;
//-- var, const, procedure ---------------------------------------------------
#define CgGLlibrary L"cgGL.dll"
extern "C" void __cdecl cgGLGetParameterArray4f(Cg::Import::PCGparameter param, int offset, int nelements, Winapi::Windows::PSingle v);
extern "C" void __cdecl cgGLGetParameterArray1d(Cg::Import::PCGparameter param, int offset, int nelements, System::PDouble v);
extern "C" void __cdecl cgGLGetParameterArray2d(Cg::Import::PCGparameter param, int offset, int nelements, System::PDouble v);
extern "C" void __cdecl cgGLGetParameterArray3d(Cg::Import::PCGparameter param, int offset, int nelements, System::PDouble v);
extern "C" void __cdecl cgGLGetParameterArray4d(Cg::Import::PCGparameter param, int offset, int nelements, System::PDouble v);
extern "C" void __cdecl cgGLSetParameterPointer(Cg::Import::PCGparameter param, int fsize, unsigned _type, int stride, const void * _pointer);
extern "C" void __cdecl cgGLEnableClientState(Cg::Import::PCGparameter param);
extern "C" void __cdecl cgGLDisableClientState(Cg::Import::PCGparameter param);
extern "C" void __cdecl cgGLSetMatrixParameterdr(Cg::Import::PCGparameter param, const System::PDouble matrix);
extern "C" void __cdecl cgGLSetMatrixParameterfr(Cg::Import::PCGparameter param, const Winapi::Windows::PSingle matrix);
extern "C" void __cdecl cgGLSetMatrixParameterdc(Cg::Import::PCGparameter param, const System::PDouble matrix);
extern "C" void __cdecl cgGLSetMatrixParameterfc(Cg::Import::PCGparameter param, const Winapi::Windows::PSingle matrix);
extern "C" void __cdecl cgGLGetMatrixParameterdr(Cg::Import::PCGparameter param, System::PDouble matrix);
extern "C" void __cdecl cgGLGetMatrixParameterfr(Cg::Import::PCGparameter param, Winapi::Windows::PSingle matrix);
extern "C" void __cdecl cgGLGetMatrixParameterdc(Cg::Import::PCGparameter param, System::PDouble matrix);
extern "C" void __cdecl cgGLGetMatrixParameterfc(Cg::Import::PCGparameter param, Winapi::Windows::PSingle matrix);
extern "C" void __cdecl cgGLSetStateMatrixParameter(Cg::Import::PCGparameter param, unsigned matrix, unsigned transform);
extern "C" void __cdecl cgGLSetMatrixParameterArrayfc(Cg::Import::PCGparameter param, int offset, int nelements, const Winapi::Windows::PSingle matrices);
extern "C" void __cdecl cgGLSetMatrixParameterArrayfr(Cg::Import::PCGparameter param, int offset, int nelements, const Winapi::Windows::PSingle matrices);
extern "C" void __cdecl cgGLSetMatrixParameterArraydc(Cg::Import::PCGparameter param, int offset, int nelements, const System::PDouble matrices);
extern "C" void __cdecl cgGLSetMatrixParameterArraydr(Cg::Import::PCGparameter param, int offset, int nelements, const System::PDouble matrices);
extern "C" void __cdecl cgGLGetMatrixParameterArrayfc(Cg::Import::PCGparameter param, int offset, int nelements, Winapi::Windows::PSingle matrices);
extern "C" void __cdecl cgGLGetMatrixParameterArrayfr(Cg::Import::PCGparameter param, int offset, int nelements, Winapi::Windows::PSingle matrices);
extern "C" void __cdecl cgGLGetMatrixParameterArraydc(Cg::Import::PCGparameter param, int offset, int nelements, System::PDouble matrices);
extern "C" void __cdecl cgGLGetMatrixParameterArraydr(Cg::Import::PCGparameter param, int offset, int nelements, System::PDouble matrices);
extern "C" void __cdecl cgGLSetTextureParameter(Cg::Import::PCGparameter param, unsigned texobj);
extern "C" unsigned __cdecl cgGLGetTextureParameter(Cg::Import::PCGparameter param);
extern "C" void __cdecl cgGLEnableTextureParameter(Cg::Import::PCGparameter param);
extern "C" void __cdecl cgGLDisableTextureParameter(Cg::Import::PCGparameter param);
extern "C" unsigned __cdecl cgGLGetTextureEnum(Cg::Import::PCGparameter param);
extern "C" void __cdecl cgGLSetManageTextureParameters(Cg::Import::PCGcontext ctx, int flag);
extern "C" int __cdecl cgGLGetManageTextureParameters(Cg::Import::PCGcontext ctx);